--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
                             {% if site.testflight_link %}
-                                <a class="testFlightLink" href="{{site.testflight_link}}"><img class="appStore" src="assets/testflight.png"></a>
+                                <script async data-uid="5c0ee93c25" src="https://wondrous-builder-368.ck.page/5c0ee93c25/index.js"></script>
+                                <a data-formkit-toggle="5c0ee93c25" href="https://wondrous-builder-368.ck.page/5c0ee93c25"><img class="appStore" src="assets/testflight.png"></a>
                             {% endif %}
                             {% if site.appstore_link %}
                                 <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
